force-app/main/default/objects/PendingOperation__c/PendingOperation__c.object-meta.xml
<CustomObject>
    <label>Opération en suspens</label>
    <nameField>
        <displayFormat>POP/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opérations en suspens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>