force-app/main/default/objects/PendingOperation__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opérations en suspens</relationshipLabel>
    <relationshipName>PendingOperations</relationshipName>
    <type>Lookup</type>
</CustomField>