force-app/main/default/objects/PendingOperation__c/fields/assetsList__c.field-meta.xml
<CustomField>
    <fullName>assetsList__c</fullName>
    <label>[#] Assets list</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>