force-app/main/default/objects/PendingOperation__c/fields/chantier__c.field-meta.xml
<CustomField>
    <fullName>chantier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chantier</label>
    <referenceTo>Chantier__c</referenceTo>
    <relationshipLabel>Opérations en suspens</relationshipLabel>
    <relationshipName>PendingOperations</relationshipName>
    <type>Lookup</type>
</CustomField>