force-app/main/default/objects/PendingOperation__c/fields/mapParameters__c.field-meta.xml
<CustomField>
    <fullName>mapParameters__c</fullName>
    <label>[#] Map parameters</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>