force-app/main/default/objects/PendingOperation__c/fields/ncpsId__c.field-meta.xml
<CustomField>
    <fullName>ncpsId__c</fullName>
    <label>[#] Ncps id</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>