force-app/main/default/objects/PendingOperation__c/fields/operationExecutionCount__c.field-meta.xml
<CustomField>
    <fullName>operationExecutionCount__c</fullName>
    <label>Nombre d&apos;exécutions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>