force-app/main/default/objects/PendingOperation__c/fields/operationExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>operationExecutionDate__c</fullName>
    <label>Date d&apos;exécution</label>
    <type>DateTime</type>
</CustomField>