force-app/main/default/objects/PendingOperation__c/fields/operationExecutionError__c.field-meta.xml
<CustomField>
    <fullName>operationExecutionError__c</fullName>
    <label>Erreur d&apos;exécution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>