force-app/main/default/objects/PendingOperation__c/fields/operationScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>operationScheduleDate__c</fullName>
    <label>Date de planification</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>