force-app/main/default/objects/PendingOperation__c/fields/ressourcePreference__c.field-meta.xml
<CustomField>
    <fullName>ressourcePreference__c</fullName>
    <label>[#] Ressource preference</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>