force-app/main/default/objects/PendingOperation__c/fields/skillsRequired__c.field-meta.xml
<CustomField>
    <fullName>skillsRequired__c</fullName>
    <label>[#] Skills required</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>