force-app/main/default/objects/PendingOperation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Planification rendez-vous service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>