force-app/main/default/objects/PendingOperation__c/fields/workType__c.field-meta.xml
<CustomField>
    <fullName>workType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type d&apos;activité</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Opérations en suspens</relationshipLabel>
    <relationshipName>PendingOperations</relationshipName>
    <type>Lookup</type>
</CustomField>